syntax = "proto3";

import "Protos/common.proto";


option csharp_namespace = "Post.API";

package post;


service Items {
	rpc GetRules (Empty) returns (ItemsList); 
	rpc GetFacilities (Empty) returns (ItemsList); 
	rpc GetSpecificities (Empty) returns (ItemsList); 
}
message Empty {

}
message ItemsList {
	repeated common.Item items = 1;
}